# s3-utils

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-image.yml  rust.yml
src/: b2b.rs  cli.rs  delete_bucket.rs  f2b.rs  main.rs  utils.rs
